--- a/velocity/pom.xml
+++ b/velocity/pom.xml
@@ -11,6 +11,7 @@
     </parent>
 
     <name>Queue-Velocity</name>
+    <version>0.0.2</version>
     <artifactId>queue-velocity</artifactId>
 
     <properties>
@@ -35,6 +36,7 @@
     </dependencies>
 
     <build>
+        <finalName>Queue-${project.version}</finalName>
         <resources>
             <resource>
                 <directory>${project.basedir}/src/main/resources</directory>
