Change artifact name in maven.yml

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,6 +29,6 @@ jobs:
         with:
           name: Queue
           path: |
-            velocity/target/queue-velocity-*.jar
+            velocity/target/Queue-*.jar
             bukkit/target/queue-bukkit-*.jar
           if-no-files-found: error
