--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Compile & Upload
+name: Compile & Test
 
 on:
   push:
@@ -23,12 +23,4 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
       - name: Build with Maven
-        run: mvn clean package --file pom.xml
-
-      - uses: actions/upload-artifact@v2
-        with:
-          name: Queue
-          path: |
-            velocity/target/Queue-*.jar
-            bukkit/target/queue-bukkit-*.jar
-          if-no-files-found: error
+        run: mvn compile test --file pom.xml
