--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -1,5 +1,9 @@
-name: QueueSound
+name: QueueBukkit
 version: '${project.version}'
-main: net.earthmc.queuesound.QueueSound
+main: net.earthmc.queuebukkit.QueueBukkit
 api-version: 1.17
 authors: [ Warriorrr ]
+
+commands:
+  queuejoin:
+    info: Command used to add a player to a queue server side.
